bro idk why its not deploying properly

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <title>joseph's site</title>
         <meta name="description" content="loser"/>
 
-        <link rel="stylesheet" href="./assets/style.css">
-        <script type="text/javascript" src="./assets/lastfm.js"></script>
+        <link rel="stylesheet" href="assets/style.css">
+        <script type="text/javascript" src="assets/lastfm.js"></script>
     </head>
     <body>
         <header class="header">
             <div style="display:flex; align-items:center; gap:14px; margin-top:12px;">
                 <div class="pfp" aria-hidden="true">
-                    <img src="./assets/shinji.webp" alt="profile picture">
+                    <img src="assets/shinji.webp" alt="profile picture">
                 </div>
                 <div>
                     <h2 class="title">hi, i'm <span>joseph</span></h2>
