--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>joseph's site</title>
+        <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f60e.svg" type="image/svg+xml">
         <meta name="description" content="loser"/>
 
         <link rel="stylesheet" href="assets/style.css">
