chore: open links in new tab :)

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                 <div class="grid" role="list">
                     <div class="project" role="listitem">
                         <h4>imp</h4>
-                        <p>half-finished c interpreter. <a class="hyperlink" href="https://github.com/sleepybaby898/imp">Source</a></p>
+                        <p>half-finished c interpreter. <a class="hyperlink" href="https://github.com/sleepybaby898/imp" target="_blank">Source</a></p>
                     </div>
 
                     <div class="project" role="listitem">
                         <h4>joseph.bar</h4>
-                        <p>this poorly made site. <a class="hyperlink" href="https://github.com/sleepybaby898/sleepybaby898.github.io">Source</a></p>
+                        <p>this poorly made site. <a class="hyperlink" href="https://github.com/sleepybaby898/sleepybaby898.github.io" target="_blank">Source</a></p>
                     </div>
 
                     <div class="project" role="listitem">
                         <h4>my github</h4>
-                        <p>other projects on <a class="hyperlink" href="https://github.com/sleepybaby898">my github</a>.</p>
+                        <p>other projects on <a class="hyperlink" href="https://github.com/sleepybaby898" target="_blank">my github</a>.</p>
                     </div>
                 </div>
             </section>
@@ -52,9 +52,9 @@
             <section class="section">
                 <h3 >Contacts</h3>
                 <div class="contacts" role="list">
-                    <a class="contact" href="https://github.com/sleepybaby898"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"></a>
-                    <a class="contact" href="https://discord.com/users/543692940573278208"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg"></a>
-                    <a class="contact" href="https://www.last.fm/user/j0seph_09"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/lastdotfm.svg"></a>
+                    <a class="contact" href="https://github.com/sleepybaby898" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"></a>
+                    <a class="contact" href="https://discord.com/users/543692940573278208" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg"></a>
+                    <a class="contact" href="https://www.last.fm/user/j0seph_09" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/lastdotfm.svg"></a>
                 </div>
             </section>
         </main>
