chore: add shh to projects

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <h3>Projects</h3>
                 <div class="grid" role="list">
                     <div class="project" role="listitem">
-                        <h4>imp</h4>
-                        <p>half-finished c interpreter. <a class="hyperlink" href="https://github.com/sleepybaby898/imp" target="_blank">Source</a></p>
+                        <h4>shh</h4>
+                        <p>mini-shell written in c. <a class="hyperlink" href="https://github.com/sleepybaby898/shh" target="_blank">Source</a></p>
                     </div>
 
                     <div class="project" role="listitem">
